testsuite/tests/test/157_test_subp/test.out
Units remaining: 3     Units remaining: 2     Units remaining: 1     
test.ads:7:4: info: corresponding test PASSED
test.ads:7:4: info: corresponding test PASSED
test.ads:7:4: info: corresponding test PASSED
test.ads:7:4: info: corresponding test PASSED
test.ads:7:4: info: corresponding test PASSED
test.ads:7:4: error: corresponding test FAILED: Test not implemented. (test-test_data-tests.adb:45)
6 tests run: 5 passed; 1 failed; 0 crashed.
